# ProgrammaticEngineMigration

./: README.txt  Statistics.xls  package-lock.json  timeStatistics.xls
BeastRestServer/: BeastRestServer.cbp  BeastRestServer.cpp  BeastRestServer.depend  BeastRestServer.layout  fields_alloc.hpp
BrainfuckUserAgentServer/: package-lock.json  server_min.bf
ErlangRTBClientProject/: .project
ErlangRTBClientProject/doc/: file.txt
ErlangRTBClientProject/src/: hello.erl
ErlangRTBServerProject/doc/: data.txt  yaws.conf
ErlangRTBServerProject/src/: rest.erl
GoRTBClientProject/: .project
GoRTBServerProject/: .project
JSRTBClientProject/: .project  README.md  hello-world-client.js  package-lock.json
JSRTBServerProject/: .project  README.md  hello-world-server.js  package-lock.json  package.json
PythonRTBClientProject/: .project
PythonRTBClientProject/src/: main.py
PythonRTBServerProject/: .project
PythonRTBServerProject/src/: main.py
RTBClientCSharp/: Program.cs  RTBClientCSharp.sln
RTBRestProjectClient/: .project  pom.xml
RTBRestProjectClient/output/: outputResults.csv  timeStatistics.csv
RTBRestProjectClient/output_BRAINFUCK_CONCURRENT/: outputResults.csv  timeStatistics.csv  totalThreadIt.csv
RTBRestProjectClient/output_BRAINFUCK_SEQ/: outputResults.csv  timeStatistics.csv  (+1 more)
RTBRestProjectReactiveServer/: .project  pom.xml
RTBRestProjectServer/: .classpath  .project  pom.xml
RTBRestProjectServerHTTP2/: .project  pom.xml
RTBServerCSharp/: Program.cs  workC#.csproj
RestBed2/: RestBed2.sln
RubyRTBClientProject/: app.rb  config.ru
RubyRTBServerProject/: app.rb  config.ru
RustRTBActicServerProject/: .project  Cargo.toml
RustRTBActicServerProject/src/: main.rs
RustRTBClientProject/: .project  Cargo.toml
RustRTBServerProject/: .project  Cargo.toml  Rocket.toml
ScalaRTBProjectClient/: .cache-main  .project
ScalaRTBProjectServer/: .cache-main  build.gradle  build.sbt
graal/: .project  build.gradle  build_graal.bat  gradle.properties  micronaut-cli.yml  run.bat  settings.gradle
resttesta/: README.md  cabal.config  resttesta.cabal  stack.yaml
resttestclient/: README.md  cabal.config  resttestclient.cabal
resttestclient/src/: Main.hs
(+213 files in other folders)
